<resources>
    <string name="app_name">Pulscircula</string>
    <string-array name="notificationsState">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string name="textInjury1">AN INJURY</string>
    <string name="textInjury2">TO REPORT ?</string>
    <string name="textReport">REPORT</string>
    <string name="textLocation">LOCATION</string>
    <string name="textDetails">DETAILS</string>
    <string name="TextNext">Next</string>
    <string name="TextEmailFull">Email address</string>
    <string name="TextPassword">Password</string>
    <string name="TextFirstName">First Name</string>
    <string name="TextEmailShort">Email</string>
    <string name="TextLastName">Last Name</string>
    <string name="TextPasswordForgotten">forgotten password</string>
    <string name="TextSteps">steps</string>
    <string name="TextCorrectSteps">Correct steps</string>
    <string name="TextPBGoals">of the goal</string>
    <string name="TextConnection">connection</string>
    <string name="TextRegister">Register</string>
    <string name="TextHeight">Height</string>
    <string name="TextWeight">Weight</string>
    <string name="TextDateOfBirth">Date of birth</string>
    <string name="TextSettings">SETTINGS</string>
    <string name="TextNotifications">Reminders</string>
    <string name="TextPrivacyPolicy">Privacy policy</string>
    <string name="TextLogOut">Log out</string>
    <string name="TextButtonEdit">Edit Profile</string>
    <string name="TextButtonSave">Save</string>
    <string name="TextEnabled">Enabled</string>
    <string name="TextDisabled">Disabled</string>
    <string name="TextYears">years</string>
    <string name="TextReadRequest">Read Request</string>
    <string name="TextStepDistance">distance per step</string>
    <string name="TextState">State</string>
    <string name="TextMotion">Motion</string>
    <string name="TextReports">Reports</string>
    <string name="TextStopReading">Stop reading</string>
    <string name="TextM01">January</string>
    <string name="TextM02">February</string>
    <string name="TextM03">March</string>
    <string name="TextM04">April</string>
    <string name="TextM05">May</string>
    <string name="TextM06">June</string>
    <string name="TextM07">July</string>
    <string name="TextM08">August</string>
    <string name="TextM09">September</string>
    <string name="TextM10">October</string>
    <string name="TextM11">November</string>
    <string name="TextM12">December</string>
    <string name="TextD1">Monday</string>
    <string name="TextD2">Tuesday</string>
    <string name="TextD3">Wednesday</string>
    <string name="TextD4">Thursday</string>
    <string name="TextD5">Friday</string>
    <string name="TextD6">Saturday</string>
    <string name="TextD7">Sunday</string>
    <string name="TextQuestionAccess">Would you like to give access to your data ?</string>
    <string name="TextYes">Yes</string>
    <string name="TextNo">No</string>
    <string name="TextNoCounterSensor">No counter sensor in this device</string>
    <string name="TextNoAccelerometer">No accelerometer in this device</string>
    <string name="TextCheckMails">Check your mails</string>
    <string name="TextWrongEP">Email or password incorrect</string>
    <string name="TextRecoveryEmail">Recovery email sent</string>
    <string name="TextEmailUnknown">email unknown</string>
    <string name="TextVerificationEmail">Verification email sent</string>
    <string name="TextRequestAcc">request accepted</string>
    <string name="TextRequestDec">request declined</string>
    <string name="TextErrorShortPassword">Password too short. Must be longer than 6 characters</string>
    <string name="TextAlarmWalk">Time to walk</string>
    <string name="TextWalkingTime">IT\'S WALKING TIME</string>
    <string name="TextWalkAlarm1">Take the time to walk</string>
    <string name="TextWalkAlarm2">14 steps are enough to oxygenate \n your whole body</string>

    <string name="TextContentDetails">Enter details about your injury</string>
    <string name="TextContentLocation">Enter location of your injury</string>
    <string name="TextContentClose">Close window</string>
    <string name="TextContentPlaster">Image of a plaster</string>
    <string name="TextContentInjuryReport">Page to report an injury</string>
    <string name="TextContentConnection">Connection Page</string>
    <string name="TextContentBackArrow">go to previous Page</string>
    <string name="TextContentUserIcon">user icon</string>
    <string name="TextContentHomePage">Home Page</string>
    <string name="TextContentUserPage">Profil Page</string>
    <string name="TextContentRegistrationPage">Registration Page</string>
    <string name="TextContentFollowingRegistrationPage">Following Registration Page</string>
    <string name="TextContentLogo">logo Pulscircula</string>
    <string name="TextContentReportsButton">see reports</string>
    <string name="TextContentHPButton">go to home page</string>
    <string name="TextContentUPButton">go to user page</string>
    <string name="TextContentGenderM">selection of gender Male</string>
    <string name="TextContentGenderF">selection of gender Female</string>
    <string name="TextContentNotifications">Notifications state selection</string>
    <string name="TextContentSupervisor">Supervisor Page</string>
    <string name="TextContentUserCheckPage">User check Page</string>
    <string name="TextContentEye">Show Password</string>
    <string name="TextContentGear">Go to settings page</string>
    <string name="TextContentPadlock">Padlock icon</string>
    <string name="TextContentEnvelope">envelope icon</string>
    <string name="TextContentCalendar">Calendar icon</string>
    <string name="TextContentAccessState">Access state icon</string>
    <string name="TextContentAlarmPage">Alarm page</string>
</resources>