<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivityNext">

    <ImageView
    android:id="@+id/BGConnection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/waves_bg"
    android:scaleType="centerCrop"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/TextContentRegistrationPage"/>

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back_arrow"
        android:contentDescription="@string/TextContentBackArrow"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/LLGenderSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="2"
        android:layout_marginTop="200dp">

        <Button
            android:id="@+id/ButtonGenderM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="-27dp"
            android:background="@drawable/boutton_m"
            android:onClick="onClick"
            app:layout_constraintEnd_toStartOf="@+id/ButtonGenderF"
            android:contentDescription="@string/TextContentGenderM"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/ButtonGenderF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-1dp"
            android:background="@drawable/boutton_f"
            android:onClick="onClick"
            android:contentDescription="@string/TextContentGenderF"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/LLGenderSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/ETHeight"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/main_font"
                android:hint="@string/TextHeight"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:paddingBottom="1dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/main_font"
                android:gravity="bottom"
                android:hint="Cm"
                android:paddingBottom="1dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck, HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/ETWeight"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/main_font"
                android:hint="@string/TextWeight"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:paddingBottom="1dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5sp"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/main_font"
                android:gravity="bottom"
                android:hint="Kg"
                android:paddingBottom="1dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck, HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/ETDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/main_font"
                android:hint="@string/TextDateOfBirth"
                android:importantForAutofill="no"
                android:inputType="datetime"
                android:paddingBottom="1dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/main_font"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/TextRegister"
            android:textAllCaps="false"
            android:textColor="#898989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TextContrastCheck" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
